Removed Sponsor Link & Fixed Email not showing up at bottom

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ a, a.email {
    color: #f89939;
 }
 
-.fa, .email {
+.fa, footer .email {
 	color: #333132;
 }
 
